adjusted analysis toc

--- a/Analysis II/Analysis II Notes.tex
+++ b/Analysis II/Analysis II Notes.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{../AMadhava}
 \rhead{MAT 533: Analysis II Notes}
+\setcounter{secnumdepth}{0}
 
 \title{Lecture Notes in Analysis II}
 \author{Spring 2026}
