modified some analysis lecture 3 notes

--- a/Analysis II/Analysis II Notes.tex
+++ b/Analysis II/Analysis II Notes.tex
@@ -12,8 +12,19 @@
 	\tableofcontents
 	\halfline 
 	\newpage 
+\section{Lecture 3: The Hahn-Banach Theorem}
+
+\subsubsection{Addendum: Extra Applications of the Hahn-Banach Theorem}
+\begin{itemize}
+	\item \textbf{Exc. (Extensions of Bounded Linear Operators)} Let $X$ and $Y$ be Banach spaces, and let $M \subset X$ be a closed subspace. Let $S: M \to Y$ be a bounded linear operator. Show that: 
+		\begin{enumerate}[itemsep =-2pt,label =(\arabic{*})]
+			\item if $\dim{Y} < \infty$, there exists an extension of $S$ to a bounded linear operator $T: X \to Y$, 
+			\item if $\dim{M} < \infty$ or $\operatorname{codim}(M) < \infty$ or $X$ is a Hilbert space, there exists a extension of $S$ to a bounded linear operator $T: X \to Y$. 
+		\end{enumerate}
+\end{itemize}
 
 
+\newpage 
 \section*{Lecture 4: Weak and Strong Convergence}
 \subsubsection*{Key Topics:}
 (1) Weak and Strong Convergence, (2) Compactness of the Unit Ball, (3) Riesz's Theorem, (4) Kakutani's Theorem 
